--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ node_modules/
 
 # Environment variables
 .env
+.env.local
+.env.*.local
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
 # OS
 .DS_Store
@@ -27,4 +29,8 @@ Thumbs.db
 
 # Development and test environment variables
 .env.development
-.env.test   
+.env.test
+
+# Build
+dist/
+build/   
