--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "nobitex-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Nobitex API Integration",
   "main": "index.js",
- "scripts": {
-     "start": "node server.js",
-     "build": "echo 'No build step required'"
-   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.8.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
-  "engines": {
-     "node": "18.x"
-   }
+  "keywords": [
+    "nobitex",
+    "api",
+    "cryptocurrency",
+    "trading"
+  ],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3"
+  }
 }
