--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "mongoose": "^8.1.3"
   },
@@ -31,6 +32,6 @@
     "nodemon": "^3.0.3"
   },
   "engines": {
-     "node": "18.x"
-   }
+    "node": "18.x"
+  }
 }
