--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.13.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3"
   },
