--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nobitex-api",
   "version": "1.0.0",
   "description": "Nobitex API Integration",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -22,6 +22,7 @@
   "dependencies": {
     "agenda": "^5.0.0",
     "axios": "^1.8.4",
+    "centrifuge": "^5.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
