--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "agenda": "^5.0.0",
     "axios": "^1.8.4",
     "centrifuge": "^5.3.4",
+    "coinmarketcap-api": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.13.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "axios-mock-adapter": "^2.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "supertest": "^7.1.0"
